# Unishox2Android

./: README.md  settings.gradle.kts
Unishox2/: build.gradle.kts
Unishox2/src/androidTest/java/org/operatorfoundation/unishox2/: ExampleInstrumentedTest.kt  Unishox2Test.kt
Unishox2/src/main/cpp/: CMakeLists.txt  unishox2_jni.c
Unishox2/src/main/java/org/operatorfoundation/unishox2/: Unishox2.kt
Unishox2/src/test/java/org/operatorfoundation/unishox2/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/org/operatorfoundation/unishox2android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/operatorfoundation/unishox2android/: MainActivity.kt
app/src/main/java/org/operatorfoundation/unishox2android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/operatorfoundation/unishox2android/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
